changement text & liens projets

--- a/index.html
+++ b/index.html
@@ -135,10 +135,9 @@
                 for IT.
               </p>
               <p class="m-2 text-lg">
-                I am currently in training to become FullStack Developer with a
-                professional title Bac +2.
+                I am looking for a company to carry out an apprenticeship for the school year 2024-2025.
               </p>
-              <p class="m-2 text-lg">I will continue to Bac +3 in 2024 - 2025.</p>
+              <p class="m-2 text-lg">The bachelor's degree program (Bac +3) will be selected based on the project offered.</p>
               <p
                 class="m-2 text-lg text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
               >
@@ -289,7 +288,7 @@
             <p
               class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
             >
-              I am looking for an internship<br><br> From April 08th to June 14th 2024
+              I am looking for a company to carry out an apprenticeship for the school year 2024-2025.<br><br> The bachelor's degree program (Bac +3) will be selected based on the project offered.
             </p>
           </div>
           <div
@@ -422,7 +421,7 @@
           class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
         >
           <div class="inline">
-            <h2 class="text-center pb-5">HBLM</h2>
+            <u><a href="https://www.hblunelmarsillargues.fr/"> <h2 class="text-center pb-5">HBLM</h2></a></u>
             <span class="text-sky-800">Type:</span> <span>Website</span>
             <br /><span class="text-sky-800">For:</span>
             <span>Sport Association</span><br />
@@ -459,7 +458,7 @@
         <div
           class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
         >
-          <h2 class="text-center pb-5">Bagueton</h2>
+          <u><a href="https://bagueton.cedricsanchez.fr"><h2 class="text-center pb-5">Bagueton</h2></a></u>
           <span class="text-sky-800">Type:</span> <span> Website</span>
           <br /><span class="text-sky-800">For:</span
           ><span> Training (Promotional)</span> <br /><span class="text-sky-800"
