--- a/index_french.html
+++ b/index_french.html
@@ -296,8 +296,7 @@
                 finalité professionnelle de niveau 5 - Bac+2)
               </p>
               <p class="m-2">
-                Ensuite, je souhaite poursuivre mes études par une licence
-                professionnelle, en alternance.
+                Je suis maintenant à la recherche d'une entreprise pour réaliser une alternance Bac +3 pour l'année scolaire 2024-2025.
               </p>
               <p
                 class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
@@ -305,10 +304,8 @@
                 <br />
                 <br />
 
-                Je recherche un stage <br />
-                <br />
-                <br />
-                du 08 avril au 14 juin 2024.
+                La filière de bachelor (bac +3) sera choisie en fonction du projet proposé
+
               </p>
             </div>
             <div
