changement text & liens projets

--- a/index_french.html
+++ b/index_french.html
@@ -383,7 +383,7 @@
                     class="m-2 max-md:m-1"
                   />
                   <img
-                    src="Portfolio_v3t/src/img/techno/devicon_react.svg"
+                    src="./Portfolio_v3t/src/img/techno/devicon_react.svg"
                     alt="React.js"
                     title="React"
                     class="m-2 max-md:m-1"
