correction icone react & liens github

--- a/index_french.html
+++ b/index_french.html
@@ -211,7 +211,7 @@
                     class="m-2 sm:m-1"
                   />
                   <img
-                    src="Portfolio_v3t/src/img/techno/devicon_react.svg"
+                    src="./Portfolio_v3t/src/img/techno/devicon_react.svg"
                     alt="React.js"
                     class="m-2 sm:m-1"
                   />
@@ -444,7 +444,7 @@
               <span>HTML/SASS/JS</span> <br /><span class="text-sky-800"
                 >Github:</span
               >
-              <a href="https://github.com/CedricSanchezGithub/" target="_blank"
+              <a href="https://github.com/CedricSanchezGithub/HBLM2" target="_blank"
                 ><i
                   class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
                 >
@@ -464,7 +464,7 @@
             <span class="text-sky-800">Tech:</span><span> Kotlin</span><br />
             <span class="text-sky-800">Github:</span>
             <a
-              href="https://github.com/CedricSanchezGithub/HBLM2"
+              href="https://github.com/CedricSanchezGithub/"
               target="_blank"
               ><i
                 class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
@@ -476,7 +476,7 @@
           <div
             class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
           >
-            <h2 class="text-center pb-5">Bagueton</h2>
+            <h2 class="text-center pb-5">Bagueton (Website)</h2>
             <span class="text-sky-800">Type:</span> <span> Website</span>
             <br /><span class="text-sky-800">Pour:</span
             ><span> Training (Promotional)</span> <br /><span
@@ -485,7 +485,7 @@
             ><span> Reactjs, TailwindCSS</span><br />
             <span class="text-sky-800">Github: </span
             ><a
-              href="https://github.com/CedricSanchezGithub/fil_rouge"
+              href="https://github.com/CedricSanchezGithub/bagueton_website"
               target="_blank"
               ><i
                 class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
