--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   class="m-2 sm:m-1"
                 />
                 <img
-                  src="Portfolio_v3t/src/img/techno/devicon_react.svg"
+                  src="./Portfolio_v3t/src/img/techno/devicon_react.svg"
                   alt="ReactJS"
                   class="m-2 sm:m-1"
                 />
@@ -366,7 +366,7 @@
                   class="m-2 max-md:m-1"
                 />
                 <img
-                  src="Portfolio_v3t/src/img/techno/devicon_react.svg"
+                  src="./Portfolio_v3t/src/img/techno/devicon_react.svg"
                   alt="React.js"
                   title="React"
                   class="m-2 max-md:m-1"
@@ -429,7 +429,7 @@
             <span>HTML/SASS/JS</span> <br /><span class="text-sky-800"
               >Github:</span
             >
-            <a href="https://github.com/CedricSanchezGithub/" target="_blank"
+            <a href="https://github.com/CedricSanchezGithub/HBLM2" target="_blank"
               ><i
                 class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
               >
@@ -447,7 +447,7 @@
           <br />
           <span class="text-sky-800">Tech:</span><span> Kotlin</span><br />
           <span class="text-sky-800">Github:</span>
-          <a href="https://github.com/CedricSanchezGithub/HBLM2" target="_blank"
+          <a href="https://github.com/CedricSanchezGithub/" target="_blank"
             ><i
               class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
             >
@@ -466,7 +466,7 @@
           ><span> Reactjs, TailwindCSS</span><br />
           <span class="text-sky-800">Github: </span
           ><a
-            href="https://github.com/CedricSanchezGithub/fil_rouge"
+            href="https://github.com/CedricSanchezGithub/bagueton_website"
             target="_blank"
             ><i
               class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
